--- a/SimpleOAuth/res/values/strings.xml
+++ b/SimpleOAuth/res/values/strings.xml
@@ -4,9 +4,10 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="get_access_token">Get Access Token</string>
-    <string name="get_request_lbl">Request Twitter Access</string>
+    <string name="clear_auth">Clear saved authentication</string>
+    <string name="get_request_lbl">Request Twitter access</string>
     <string name="complete">Complete!</string>
     <string name="title_activity_tweet">TweetActivity</string>
+    <string name="tweet">Tweet!</string>
 
 </resources>
